--- a/scss/functions/_calc-util.scss
+++ b/scss/functions/_calc-util.scss
@@ -1,9 +1,10 @@
 @use "sass:map";
 @use "sass:math";
+@use "sass:meta";
 @use "sass:string";
 
 // Return valid calc
-@function calc-add($value1, $value2, $return-calc: true) {
+@function add($value1, $value2, $return-calc: true) {
   @if $value1 == null {
     @return $value2;
   }
@@ -12,14 +13,14 @@
     @return $value1;
   }
 
-  @if type-of($value1) == number and type-of($value2) == number and comparable($value1, $value2) {
+  @if meta.type-of($value1) == number and meta.type-of($value2) == number and math.compatible($value1, $value2) {
     @return $value1 + $value2;
   }
 
   @return if($return-calc == true, calc(#{$value1} + #{$value2}), $value1 + unquote(" + ") + $value2);
 }
 
-@function calc-subtract($value1, $value2, $return-calc: true) {
+@function subtract($value1, $value2, $return-calc: true) {
   @if $value1 == null and $value2 == null {
     @return null;
   }
@@ -32,15 +33,15 @@
     @return $value1;
   }
 
-  @if type-of($value1) == number and type-of($value2) == number and comparable($value1, $value2) {
+  @if meta.type-of($value1) == number and meta.type-of($value2) == number and math.compatible($value1, $value2) {
     @return $value1 - $value2;
   }
 
-  @if type-of($value2) != number {
+  @if meta.type-of($value2) != number {
     $value2: string.unquote("(") + $value2 + string.unquote(")");
   }
 
-  @return if($return-calc == true, calc(#{$value1} - #{$value2}), $value1 + unquote(" - ") + $value2);
+  @return if($return-calc == true, calc(#{$value1} - #{$value2}), $value1 + string.unquote(" - ") + $value2);
 }
 
 @function calc-divide($dividend, $divisor, $precision: 10) {
