--- a/scss/_functions.scss
+++ b/scss/_functions.scss
@@ -1,6 +1,7 @@
 @forward "functions/assert";
 @forward "functions/calc-util";
 @forward "functions/color-util";
+@forward "functions/encode-svg";
 @forward "functions/map-util";
 @forward "functions/palette";
 @forward "functions/rem-calc";
