--- a/scss/functions/_assert.scss
+++ b/scss/functions/_assert.scss
@@ -1,5 +1,6 @@
 @use "sass:list";
 @use "sass:map";
+@use "sass:math";
 
 // Ascending
 // Used to evaluate Sass maps, such as grid breakpoints.
@@ -9,7 +10,7 @@
   @each $key, $num in $map {
     @if $prev-num == null or unit($prev-num) == "%" or unit($num) == "%" {
       // Do nothing
-    } @else if not comparable($prev-num, $num) {
+    } @else if not math.compatible($prev-num, $num) {
       @warn "Potentially invalid value for #{$map-name}: This map must be in ascending order, but key '#{$key}' has value #{$num} whose unit makes it incomparable to #{$prev-num}, the value of the previous key '#{$prev-key}' !";
     } @else if $prev-num >= $num {
       @warn "Invalid value for #{$map-name}: This map must be in ascending order, but key '#{$key}' has value #{$num} which isn't greater than #{$prev-num}, the value of the previous key '#{$prev-key}' !";
