--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -1,8 +1,8 @@
 @forward "forms/form-control";
-// @forward "forms/form-label";
-// @forward "forms/form-check";
-// @forward "forms/form-file";
-// @forward "forms/form-range";
+@forward "forms/form-label";
+@forward "forms/form-check";
+@forward "forms/form-file";
+@forward "forms/form-range";
 // @forward "forms/form-color";
 // @forward "forms/form-layout";
 // @forward "forms/form-validation";
