--- a/scss/functions/_encode-svg.scss
+++ b/scss/functions/_encode-svg.scss
@@ -19,7 +19,7 @@ $encode-svg-chars: (
     @each $char, $encoded in $encode-svg-chars{
       // Do not escape the url brackets
       @if string.index($string, "url(") == 1 {
-        $string: url("#{str-replace(string.slice($string, 6, -3), $char, $encoded)}");
+        $string: url("#{str-util.str-replace(string.slice($string, 6, -3), $char, $encoded)}");
       } @else {
         $string: str-util.str-replace($string, $char, $encoded);
       }
