Remainder of forms

--- a/scss/_forms.scss
+++ b/scss/_forms.scss
@@ -3,6 +3,6 @@
 @forward "forms/form-check";
 @forward "forms/form-file";
 @forward "forms/form-range";
-// @forward "forms/form-color";
-// @forward "forms/form-layout";
-// @forward "forms/form-validation";
+@forward "forms/form-color";
+@forward "forms/form-layout";
+@forward "forms/form-validation";
