--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -185,8 +185,8 @@ $spacers-margin-negative-prepend:   n !default;
 $font-family-sans-serif:    system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", "Noto Sans", "Liberation Sans", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-serif:         "Iowan Old Style", "Apple Garamond", Baskerville, "Times New Roman", "Droid Serif", Times, "Source Serif Pro", serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-monospace:     SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
-$font-family-base:          var(--#{$prefix}font-sans-serif) !default;
-$font-family-code:          var(--#{$prefix}font-monospace) !default;
+$font-family-base:          var(--#{$prefix}font-family-sans-serif) !default;
+$font-family-code:          var(--#{$prefix}font-family-monospace) !default;
 // stylelint-enable value-keyword-case
 
 // `$font-size-root` affects the value of `rem`, which is used for as well font sizes, paddings and margins
@@ -796,3 +796,42 @@ $utility-spacing-breakpoints:       map.keys($grid-breakpoints) !default;
 $utility-text-align-breakpoints:    map.keys($grid-breakpoints) !default;
 $utility-text-size-breakpoints:     map.keys($grid-breakpoints) !default;
 $utility-valign-breakpoints:        map.keys($grid-breakpoints) !default;
+
+// Component pieces
+// =====
+$caret-width:               .75rem !default;
+$caret-border-width:        .3125rem !default;
+
+$close-font-size:           ($font-size-base * 1.5) !default;
+$close-font-weight:         $font-weight-bold !default;
+$close-opacity:             .65 !default;
+$close-hover-opacity:       .85 !default;
+
+$drag-font-size:            ($font-size-base * 1.5) !default;
+$drag-font-weight:          $font-weight-bold !default;
+$drag-opacity:              .65 !default;
+$drag-hover-opacity:        .85 !default;
+
+// Tooltips
+// =====
+$tooltip-max-width:             rem-calc.rem(208px) !default;  // 208px=>13rem
+$tooltip-padding-y:             .25rem !default;
+$tooltip-padding-x:             .5rem !default;
+$tooltip-margin:                .125rem !default;
+
+$tooltip-font-size:             ($font-size-base * .875) !default;
+$tooltip-bg:                    $uibase-900 !default;
+$tooltip-color:                 $white !default;
+$tooltip-opacity:               .9 !default;
+$tooltip-border-radius:         $border-radius !default;
+
+$tooltip-close-padding-y:       .125rem !default;
+$tooltip-close-padding-x:       .3125rem !default;
+$tooltip-close-color:           $tooltip-color !default;
+$tooltip-close-opacity:         $close-opacity !default;
+$tooltip-close-hover-color:     $tooltip-color !default;
+$tooltip-close-hover-opacity:   $close-hover-opacity !default;
+
+$tooltip-arrow-width:           .75rem !default;
+$tooltip-arrow-height:          .375rem !default;
+$tooltip-arrow-color:           $tooltip-bg !default;
