--- a/scss/forms/_form-color.scss
+++ b/scss/forms/_form-color.scss
@@ -1,46 +1,52 @@
+@use "../settings" as *;
+@use "../settings-options" as *;
+@use "../functions" as *;
+@use "../mixins" as *;
+@use "../vendor/rfs" as *;
+
 // Color input
 
 @if $enable-form and $enable-form-color {
-    .form-color {
-        display: block;
-        width: auto;
-        min-width: calc-input-height-inner($input-padding-y, $input-line-height);
-        height: calc-input-height-inner($input-padding-y, $input-line-height);
-        padding: $input-padding-y;
-        @include font-size($input-font-size);
-        line-height: $input-line-height;
-        color: $input-color;
-        background-color: $input-bg;
-        background-image: none;
-        border: $input-border-width solid $input-border-color;
+  .form-color {
+    display: block;
+    width: auto;
+    min-width: calc-input-height-inner($input-padding-y, $input-line-height);
+    height: calc-input-height-inner($input-padding-y, $input-line-height);
+    padding: $input-padding-y;
+    @include font-size($input-font-size);
+    line-height: $input-line-height;
+    color: $input-color;
+    background-color: $input-bg;
+    background-image: none;
+    border: $input-border-width solid $input-border-color;
 
-        @include border-radius($input-border-radius);
-        @include box-shadow($input-box-shadow);
-        @include transition($input-transition);
-        @include form-control-focus();
+    @include border-radius($input-border-radius);
+    @include box-shadow($input-box-shadow);
+    @include transition($input-transition);
+    @include form-control-focus();
 
-        &:disabled {
-            background-color: $input-disabled-bg;
-            border-color: $input-disabled-border-color;
-            opacity: $input-disabled-opacity;
-        }
-
-        &:not(:disabled):not([readonly]) {
-            cursor: pointer;
-        }
-
-        &::-moz-color-swatch {
-            border: 0 !important; // stylelint-disable-line declaration-no-important
-            @include border-radius(subtract($input-border-radius, $input-border-width));
-        }
-
-        &::-webkit-color-swatch-wrapper {
-            padding: 0;
-        }
-
-        &::-webkit-color-swatch {
-            border: 0 !important; // stylelint-disable-line declaration-no-important
-            @include border-radius(subtract($input-border-radius, $input-border-width));
-        }
+    &:disabled {
+      background-color: $input-disabled-bg;
+      border-color: $input-disabled-border-color;
+      opacity: $input-disabled-opacity;
     }
+
+    &:not(:disabled):not([readonly]) {
+      cursor: pointer;
+    }
+
+    &::-moz-color-swatch {
+      border: 0 !important; // stylelint-disable-line declaration-no-important
+      @include border-radius(subtract($input-border-radius, $input-border-width));
+    }
+
+    &::-webkit-color-swatch-wrapper {
+      padding: 0;
+    }
+
+    &::-webkit-color-swatch {
+      border: 0 !important; // stylelint-disable-line declaration-no-important
+      @include border-radius(subtract($input-border-radius, $input-border-width));
+    }
+  }
 }
