--- a/scss/forms/_form-validation.scss
+++ b/scss/forms/_form-validation.scss
@@ -1,3 +1,7 @@
+@use "../settings" as *;
+@use "../settings-options" as *;
+@use "../mixins" as *;
+
 // Form validation
 
 // Provide feedback to users when form field values are valid or invalid. Works
@@ -5,7 +9,7 @@
 // pseudo-classes but also includes `.is-invalid` and `.is-valid` classes for
 // server side validation.
 @if $enable-form and $enable-form-validation {
-    @each $state, $data in $form-validation-states {
-        @include form-validation-state($state, $data...);
-    }
+  @each $state, $data in $form-validation-states {
+    @include form-validation-state($state, $data...);
+  }
 }
